--- a/skateright_flutter/ios/.gitignore
+++ b/skateright_flutter/ios/.gitignore
@@ -68,6 +68,7 @@ DerivedData/
 timeline.xctimeline
 playground.xcworkspace
 APIkeys.swift
+GoogleService-Info.plist
 
 # Swift Package Manager
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
