--- a/skateright_flutter/ios/.gitignore
+++ b/skateright_flutter/ios/.gitignore
@@ -1,5 +1,5 @@
-APIkeys.swift
-GoogleService-Info.plist
+/Runner/APIkeys.swift
+/Runner/GoogleService-Info.plist
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/swift,macos
