--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -67,7 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - ./assets/z5Cf7.png
+    - ./assets/map/map_style.json
+    - ./assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -76,7 +79,14 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: ./assets/fonts/RobotoMono-Regular.ttf
+        - asset: ./assets/fonts/RobotoMono-bold.ttf
+    - family: Karla
+      fonts:
+        - asset: ./assets/fonts/Karla-Regular.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
