--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -68,9 +68,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - ./assets/z5Cf7.png
-    - ./assets/map/map_style.json
-    - ./assets/
+    - assets/z5Cf7.png
+    - assets/map/map_style.json
+    - assets/map/map_pin.png
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
