--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^0.2.6
   google_maps_flutter: ^2.1.1
+  geolocator: ^8.2.0
   async: ^2.8.2
   firebase_core: ^1.13.1
   firebase_database: ^9.0.8
   cloud_functions: ^3.2.10
   cloud_firestore: ^3.1.11
+  location_web: ^3.1.1
 
 
 dev_dependencies:
@@ -68,7 +70,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/map/
+    - assets/figures/
+    - assets/backgrounds/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -77,7 +83,14 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: ./assets/fonts/RobotoMono-Regular.ttf
+        - asset: ./assets/fonts/RobotoMono-Bold.ttf
+    - family: Karla
+      fonts:
+        - asset: ./assets/fonts/Karla-Regular.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
