--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -39,12 +39,13 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^0.2.6
   google_maps_flutter: ^2.1.1
-  geolocator: ^8.2.0
+  location: ^4.2.0
   async: ^2.8.2
   firebase_core: ^1.13.1
   firebase_database: ^9.0.8
   location_web: ^3.1.1
 
+  material_floating_search_bar: ^0.3.7
 
 dev_dependencies:
   flutter_test:
