--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   location_web: ^3.1.1
 
   material_floating_search_bar: ^0.3.7
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
