--- a/skateright_flutter/windows/CMakeLists.txt
+++ b/skateright_flutter/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(map_app LANGUAGES CXX)
+project(skateright_flutter LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "map_app")
+set(BINARY_NAME "skateright_flutter")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
