--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/figures/
     - assets/backgrounds/
     - assets/images/
+    - assets/ca/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
