--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^0.2.6
   google_maps_flutter: ^2.1.1
-  geolocator: ^8.2.0
   http: ^0.13.4
   async: ^2.8.2
   firebase_core: ^1.13.1
@@ -50,6 +49,8 @@ dependencies:
 
   material_floating_search_bar: ^0.3.7
   flutter_svg: ^1.0.3
+  lottie: ^1.3.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -79,9 +80,10 @@ flutter:
     - assets/figures/
     - assets/backgrounds/
     - assets/images/
+    - assets/animations/
+    - assets/logo/
     - assets/ca/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
