Reviews now added to spots after completed

--- a/skateright_flutter/android/app/src/main/AndroidManifest.xml
+++ b/skateright_flutter/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <uses-permission android:name="android.permission.android.permission.INTERNET"/>    <!--Delete once we get the places api calls thru firebase -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
 
    <application
