--- a/skateright_flutter/pubspec.yaml
+++ b/skateright_flutter/pubspec.yaml
@@ -75,17 +75,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/map/
+    - assets/figures/
+    - assets/backgrounds/
+    - assets/images/
+    # - assets/ca/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
-  assets:
-  - assets/map/
-  - assets/figures/
-  - assets/backgrounds/
-  - assets/images/
-  - assets/starburst_no_outline.png
-  - assets/starbusrt_onlyoutline.png
+    - assets/starburst_no_outline.png
+    - assets/starbusrt_onlyoutline.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
